ligolang/src/test/contracts/negative/parametric_types2.mligo
type 'a foo = 'a * 'a
type bar = (int,string) foo